# asedriveiiie

./: CMakeLists.txt  README.md  asedriveiiie_3.7.orig.tar.gz.delta  asedriveiiie_3.7.orig.tar.gz.id
.devcontainer/: Dockerfile  devcontainer.json
asedriveiiie-serial/: Ase.h  CMakeLists.txt  ChangeLog  CommandTypes.c  DriverIO.c  InitCardParams.c  LICENSE  LinuxDefines.h  Makefile  MemoryCards.c  MemoryCards.h  README  ReaderCommands.c  T1Protocol.h  ifdhandler.c  serial.c
asedriveiiie-serial/etc/: reader.conf.in
asedriveiiie-usb/: Ase.h  CMakeLists.txt  ChangeLog  CommandTypes.c  DriverIO.c  InitCardParams.c  LICENSE  LinuxDefines.h  Makefile  Makefile.inc  MemoryCards.c  README  ReaderCommands.c  T1Protocol.c  T1Protocol.h  atr.c  atr.h  ifdhandler.c  usb.c
debian/: changelog  control  copyright  libasedrive-serial.config  libasedrive-serial.postinst  libasedrive-serial.postrm  libasedrive-serial.templates  libasedrive-usb.postinst  libasedrive-usb.postrm  rules  watch
debian/patches/: 00list  03_serial_build  03_serial_build.dpatch  03_usb_build  03_usb_build.dpatch  04_Makefile.dpatch  04_configure  04_configure.dpatch  05_cold_reset  06_rules_file_install  07_build_usb  series
debian/po/: POTFILES.in  ca.po  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot  vi.po
